reviewed with matt and solved spacing and flexbox bugs

--- a/intermediate-js/05-css-mocks/style.scss
+++ b/intermediate-js/05-css-mocks/style.scss
@@ -29,14 +29,15 @@ section {
   /*display: flex;*/
   #mock2container {
     margin: auto;
+    border-radius: 5px;
     max-width: 400px;
     border: 1px solid grey;
     box-shadow: -1px 1px .5px .1px;
   }
-  /*get rid of that little bit of white space*/
   #catImgDiv {
     img {
       width: 100%;
+      display: block;
     }
   }
 
@@ -57,6 +58,7 @@ section {
 @media all and (max-width: 800px) {
   #mock3 {
     flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -68,21 +70,24 @@ section {
     border-radius: 5px;
     position: relative;
     overflow: hidden;
+    margin: 10px;
+
     &:hover {
       cursor: pointer;
       .hiddenText {
-        transform: translateY(-140px);
+        transform: translateY(-135px);
       }
     }
   }
 
   img {
     max-width: 200px;
+    display: block;
   }
 
   .hiddenText {
     width: 100%;
-    height: 100%;
+    height: 110%;
     transition: transform 1s ease;
     background-color: black;
     color: white;
